--- a/_replies/20200703a.md
+++ b/_replies/20200703a.md
@@ -2,7 +2,7 @@
 layout: reply
 date: 2020-07-03 23:04:00
 reply: https://www.zerohedge.com/political/america-heading-civil-war
-blockquote: "It's also the classic false choice narrative. You can choose Marxism and communism, or you can choose fascism.  Communism being the elevation of the weak and the oppression of the strong in the name of arbitrary "equality", and fascism being the elimination of the weak or less fortunate in the name of making more room for the strong.  Both sides rely on totalitarian government to assert dominance, and both sides benefit the elitist establishment.  The great con is that there is no third option, when there is; the non-aggression principle, citizen defense, voluntarism and freedom."
+blockquote: It's also the classic false choice narrative. You can choose Marxism and communism, or you can choose fascism.  Communism being the elevation of the weak and the oppression of the strong in the name of arbitrary "equality", and fascism being the elimination of the weak or less fortunate in the name of making more room for the strong.  Both sides rely on totalitarian government to assert dominance, and both sides benefit the elitist establishment.  The great con is that there is no third option, when there is—the non-aggression principle, citizen defense, voluntarism and freedom.
 ---
 
 There's so much in here I hate to love because its accurate and scary. As the "left" and "right" continue to balkanize into competing visions of dictatorship—mob rule or Führer rule—there are going to be hundrerds of thousands of people looking to move out of high-density urban areas to safer pastures. A lot of us left population centers a couple years ago. The writing has been on the wall that if you want to remain free, you need distance, land, resources and wealth. And more things I won't mention here. If it comes to it, I'll gladly go just about anywhere for some peace, quiet and freedom from homo vulgaris and homo dictātor. You just hope they let you...
