--- a/_replies/20200709b.md
+++ b/_replies/20200709b.md
@@ -5,4 +5,4 @@ reply: https://twitter.com/jonasdowney/status/1280620028774305792
 blockquote: Got an email asking about how we achieve "simple design" for @basecamp and @heyhey, so thought I'd share the answer...
 ---
 
-[@jonasdowney](https://twitter.com/jonasdowney/status/1280620028774305792) Number 2. Good copywriting is everything in good design. Write your great copy [*before*](https://derykmakgill.github.io/drw/2019/06/28/lorem-ipsum.html) you do your designs and you'll often see you don't need to do much else. I was guilty of Lorem Ipsum designing for years before I learned this.
+[@jonasdowney](https://twitter.com/jonasdowney/status/1280620028774305792) Number 2. Good copywriting is everything in good design. Write your copy [*before*](https://derykmakgill.github.io/drw/2019/06/28/lorem-ipsum.html) you do your designs and you'll often see you don't need to do much else. I was guilty of Lorem Ipsum designing for years before I learned this.
